# data-structures

./: .gitignore  CMakeLists.txt  README.md
Albero/: provaAlbero.cpp
Albero/AlberoBinario/: bintree.h
Albero/AlberoNario/: Linked_tree.h  testAlbero.cpp
Coda/: ProvaCoda.cpp  Queue.h  Queue_Vector.h
CodaPrioritaria/: PriorQueue.h  PriorQueueVet.h
Dizionario/: Dictionary.h
Grafo/: Graph.h  Nodo.h  README.md
Insieme/: Linked_Set.h
Lista/: Linked_List.h  List.h  ProvaLista.cpp
Pila/: Linked_Stack.h  Stack.h  Stack_Vector.h
Problemi/: HanoiTower.md
data_structures/: List.h  List.md  List_Vector.h
data_structures/Albero/: README.md  provaAlbero.cpp
data_structures/Albero/Albero binario/: Linked_bintree.h  Nodo.h  bintree.h
data_structures/Albero/Albero binario 2/: Linked_bintree.h  Nodo.h  bintree.h
data_structures/Albero/AlberoBinario/: Linked_bintree.h  bintree.h
data_structures/Albero/AlberoNario/: Linked_tree.h  Nodo.h  tree.h
data_structures/Coda/: Linked_Queue.h  ProvaCoda.cpp  Queue_Vector.h  README.md
data_structures/Dizionario/: Dictionary.h  Open_HashTable.h  ProvaDizionario.cpp  README.md  myHash.h
data_structures/Insieme/: Linked_Set.h  ProvaInsieme.cpp  README.md  Set.h
data_structures/Lista/: Linked_List.h  List_Vector.h  ProvaLista.cpp
data_structures/Pila/: Linked_Stack.h  ProvaStack.cpp  README.md  Stack.h  Stack_Vector.h
